# Django-ORM

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README  README.md  archivematicaCreateMETSReingest.py  archivematicaCreateMETSRights.py  archivematicaCreateMETSRightsDspaceMDRef.py  archivematicaCreateMETSTrim.py  archivematicaFunctions.py  create_aip_mets.py  create_mets_dataverse_v2.py  create_mets_md_csv.py  create_mets_reingest.py  create_mets_trim.py  db.sqlite3  main.py  manage.py  notes.md  pyproject.toml  requirements.txt  sanitize_names.py  settings.py  sqlite.db
apps/core/: models.py  utils.py
apps/users/: models.py
apps/videos/: models.py
apps/youtube/: models.py
db/: models.py
fixtures/: fixtures.json
main/: models.py
main/migrations/: 0001_initial.py
project/: manage.py  myscript.py  settings.py
